--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -5,6 +5,7 @@
   bottom: 0;
   right: 0;
   background-color: rgba(0,0,0,0.56);
+  z-index: 1;
 }
 .Dialog{
     position: fixed;
@@ -56,6 +57,7 @@
   top:20%;
   left:40%;
   width:400px;
+  z-index: 2;
 }
 
   .timeDelay-Pop-title{
