--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -4,7 +4,8 @@
   left: 0;
   bottom: 0;
   right: 0;
-  background-color: rgba(0,0,0,0.56);
+  background-color: #0000008f;
+  z-index: 1;
 }
 .Dialog{
     position: fixed;
@@ -13,56 +14,77 @@
     transform: translate(-50%, -50%);
     width: 720px;
     border-radius: 30px;
-       /* background-color: white; */
+    z-index: 2;
 }
-  .servicePop-title{
-      /* font-size: 28px; */
-      letter-spacing: -1px;
-      font-weight: bold;
-      color: #333;
-      text-align: right;             
+
+  /* 할증 dialog */
+  .surcharge-dialog{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 900px;
+    border-radius: 30px;
+    z-index: 2;
   }
-  .servicePop-title-1{
-    width: 30px;
-    background-color: #0f53a8;
-    padding: 8px;
-    cursor: pointer;
-  }
-  .servicePop-image{
-      cursor: pointer;
-      float: right;
-      margin-top: 20px;
-   }
-  .servicePop-content{
+  .surcharge-container{
     background-color: white;
     padding:30px;
     text-align: left;
     color: #777;
   }
-  .servicePop-content .agree_inner { 
-      width: 100%; 
-      height: 320px; 
-      overflow-y: scroll; 
-      border: 1px solid #ccc; 
-      padding: 10px; 
-      text-align: left;
+  .surcharge-title{
+    /* font-size: 28px; */
+    letter-spacing: -1px;
+    font-weight: bold;
+    color: #333;
+    text-align: right;             
+    display: inline-block;
+    font-size: 25px;
+    line-height: 30px;
   }
-  
+  .surcharge-close{
+    width: 30px;
+    background-color: #fddc00;
+    padding: 8px;
+    cursor: pointer;
+    /* display: inline-block; */
+    float: right;
+  }
+  .surcharge-container .selLayout{ 
+    margin-top: 20px;
+    width: 100%; 
+    height: 320px; 
+    overflow-y: scroll; 
+    border: 1px solid #ccc; 
+    padding: 20px; 
+    text-align: left;
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+  .selLayout::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, Opera*/
+  }
 
-/* 유튜브-미국로또주문방법 */
+  .selectBlock{
 
-.ytb-content{
-  width:720px;
-  height: 560px;
-  background: #fff;
-  text-align: center;
-}
+  }
+  .selectBlock .mainTitle{
+    display: inline-block;
+    font-size: 20px;
+    vertical-align: middle;
+    font-weight: bold;
+  }
+  .selectBlock .ant-select{
+    margin-left: 20px;
+    width: 250px;
+    font-size: 15px;
+    display: inline-block;
+    vertical-align: middle;
+  }
+  .listBlock{
 
-.ytb-content-box{
-  padding: 20px;
-}
+  }
 
-.ytb-content-text{
-  font-size: 18px;
-  font-weight: 500;;
-}
+
+
