--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -23,7 +23,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 900px;
+    width: 1000px;
     border-radius: 30px;
     z-index: 2;
   }
@@ -51,10 +51,10 @@
     /* display: inline-block; */
     float: right;
   }
-  .surcharge-container .selLayout{ 
+  .surchargeLayout{ 
     margin-top: 20px;
     width: 100%; 
-    height: 320px; 
+    height: 725px; 
     overflow-y: scroll; 
     border: 1px solid #ccc; 
     padding: 20px; 
@@ -62,29 +62,288 @@
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
   }
-  .selLayout::-webkit-scrollbar {
+  .surchargeLayout::-webkit-scrollbar {
     display: none; /* Chrome, Safari, Opera*/
   }
-
-  .selectBlock{
+  .selectBlock .ant-form-item{
+    margin-bottom: 0px;
+  }
+  .selectBlock .selectItem{
+    display: inline-block;
+  }
+  .selectBlock .override-select{
+    margin-left: 20px;
+    width: 250px;
+    font-size: 15px;
+  }
+  .listBlock{
+    margin-top: 20px;
+  }
+  .listBlock .ant-btn{
+    margin-left: -5px;
+  }
+  .insertBlock{
 
   }
-  .selectBlock .mainTitle{
+  .mainTitle{
     display: inline-block;
     font-size: 20px;
     vertical-align: middle;
     font-weight: bold;
   }
-  .selectBlock .ant-select{
+  .subTitle{
+    display: inline-block;
+    font-size: 18px;
+    vertical-align: middle;
+  }
+  .subDate{
+    display: inline-block;
+    margin-left: 32px;
+    font-size: 18px;
+    vertical-align: middle;
+  }
+  .selectBox{
+    display: inline-block;
+    margin-left: 10px;
+    font-size: 18px;
+    vertical-align: middle;
+    color: #fddc00;
+    border-radius: 10px;
+  }
+  .selectBox .ant-form-item{
+    margin-bottom: 0px;
+  }
+  .selectBox .ant-picker{
+    width: 380px;
+    padding: 11px 11px;
+    font-size: 18px;
+    border-radius: 10px;
+  }
+  .selectBox .ant-picker-input > input{
+    text-align: center;
+  }
+  .btnInsert{
+    margin-top: 10px;
+  }
+  .inputBox{
+    display: inline-block;
+    margin-left: 10px;
+    font-size: 18px;
+    vertical-align: middle;
+    color: #fddc00;
+    border-radius: 10px;
+  }
+  .inputBox .ant-form-item{
+    margin-bottom: 0px;
+    display: inline-block;
+    vertical-align: middle;
+  }
+  .inputBox #surchargeName{
+    width: 350px;
+    padding: 8px 11px;
+    font-size: 18px;
+    border-radius: 10px;
+  }
+  .inputBox #feeAdd{
+    width: 335px;
+    padding: 8px 11px;
+    font-size: 18px;
+    border-radius: 10px;
+    text-align: right;
+  }
+  .priceText{
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: 5px;
+    font-size: 20px;
+    color: #000;
+  }
+  .btnInsert .ant-btn{
+    width: 150px;
+    font-size: 18px;
+    border-radius: 2px;
+    vertical-align: middle;
+    padding: 0px;
+    height: 43px;
+    float: right;
+  }
+
+  /* 콜등록 dialog */
+  .addcall-dialog{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 1000px;
+    border-radius: 30px;
+    z-index: 2;
+  }
+  .addcall-container{
+    background-color: white;
+    padding:30px;
+    text-align: left;
+    color: #777;
+  }
+  .addcall-title{
+    /* font-size: 28px; */
+    letter-spacing: -1px;
+    font-weight: bold;
+    color: #333;
+    text-align: right;             
+    display: inline-block;
+    font-size: 25px;
+    line-height: 30px;
+  }
+  .addcall-close{
+    width: 30px;
+    background-color: #fddc00;
+    padding: 8px;
+    cursor: pointer;
+    /* display: inline-block; */
+    float: right;
+  }
+  .addcallLayout{ 
+    margin-top: 20px;
+    width: 100%; 
+    height: 725px; 
+    overflow-y: scroll; 
+    border: 1px solid #ccc; 
+    padding: 10px 20px 20px; 
+    text-align: left;
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+  .addcallLayout::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, Opera*/
+  }
+  .mainTitle.sub{
+    display: inline-block;
+    font-size: 18px;
+    vertical-align: middle;
+    font-weight: bold;
+    margin-left: 10px;
+  }
+  .addcallLayout .selectBlock{
+    margin-top: 15px;
+  }
+  .addcallLayout .selectBlock .override-select.branch{
     margin-left: 20px;
-    width: 250px;
+    width: 400px;
     font-size: 15px;
     display: inline-block;
     vertical-align: middle;
   }
+  .addcallLayout .selectBlock .override-select.fran{
+    margin-left: 20px;
+    width: 201px;
+    font-size: 15px;
+    display: inline-block;
+    vertical-align: middle;
+  }
+  .addcallLayout .selectBlock .override-select.time{
+    margin-left: 10px;
+    width: 112px;
+    font-size: 15px;
+    display: inline-block;
+    vertical-align: middle;
+  }
+
+
+
+
   .listBlock{
+    margin-top: 20px;
+  }
+  .listBlock .ant-btn{
+    margin-left: -5px;
+  }
+  .insertBlock{
 
   }
+  .mainTitle{
+    display: inline-block;
+    font-size: 20px;
+    vertical-align: middle;
+    font-weight: bold;
+  }
+  .subTitle{
+    display: inline-block;
+    font-size: 18px;
+    vertical-align: middle;
+  }
+  .subDate{
+    display: inline-block;
+    margin-left: 32px;
+    font-size: 18px;
+    vertical-align: middle;
+  }
+  .selectBox{
+    display: inline-block;
+    margin-left: 10px;
+    font-size: 18px;
+    vertical-align: middle;
+    color: #fddc00;
+    border-radius: 10px;
+  }
+  .selectBox .ant-form-item{
+    margin-bottom: 0px;
+  }
+  .selectBox .ant-picker{
+    width: 380px;
+    padding: 11px 11px;
+    font-size: 18px;
+    border-radius: 10px;
+  }
+  .selectBox .ant-picker-input > input{
+    text-align: center;
+  }
+  .btnInsert{
+    margin-top: 10px;
+  }
+  .inputBox{
+    display: inline-block;
+    margin-left: 10px;
+    font-size: 18px;
+    vertical-align: middle;
+    color: #fddc00;
+    border-radius: 10px;
+  }
+  .inputBox .ant-form-item{
+    margin-bottom: 0px;
+    display: inline-block;
+    vertical-align: middle;
+  }
+  .inputBox #surchargeName{
+    width: 350px;
+    padding: 8px 11px;
+    font-size: 18px;
+    border-radius: 10px;
+  }
+  .inputBox #feeAdd{
+    width: 335px;
+    padding: 8px 11px;
+    font-size: 18px;
+    border-radius: 10px;
+    text-align: right;
+  }
+  .priceText{
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: 5px;
+    font-size: 20px;
+    color: #000;
+  }
+  .btnInsert .ant-btn{
+    width: 150px;
+    font-size: 18px;
+    border-radius: 2px;
+    vertical-align: middle;
+    padding: 0px;
+    height: 43px;
+    float: right;
+  }
+
+  
 
 /* 시간지연 dialog */
 .timeDelay-Dialog{
