--- a/src/css/order.css
+++ b/src/css/order.css
@@ -17,3 +17,25 @@
 .dataTableLayout{
     margin-top: 40px;
 }
+
+.riderTableLayout{
+    margin-top: 10px;
+}
+
+.orderTab{
+    margin-left: 0px !important;
+}
+
+.textLayout{
+    margin-top: 30px;
+}
+
+.riderText{
+    font-size: 20px;
+    font-family: NotoSansBold;
+}
+
+.mapLayout{
+    width:1000px;
+    height:600px;
+}
