--- a/src/css/index.css
+++ b/src/css/index.css
@@ -26,6 +26,14 @@ body {
   margin-top: 10px !important;
 }
 
+.m-t-m13 {
+  margin-top: -13px !important;
+}
+
+.m-t-20 {
+  margin-top: 20px !important;
+}
+
 .m-b-0 {
   margin-bottom: 0px !important;
 }
