--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -460,8 +460,14 @@
   margin-top: 20px;
   display: inline-block;
 }
+.addFranchiseWrapper.bot .addFranchiseTitle{
+  font-size: 23px;
+  vertical-align: middle;
+  font-weight: bold;
+  color: #1890ff;
+}
 .addFranchiseWrapper.bot .mainTitle{
-  display: inline-block;
+  /* display: inline-block; */
   font-size: 20px;
   vertical-align: middle;
   font-weight: bold;
@@ -477,7 +483,9 @@
   font-size: 18px;
   margin-top: 12px;
 }
-
+.addFranchiseWrapper.bot .contentBlock{
+  /* display: inline-block; */
+}
 
 /* 시간지연 dialog */
 .timeDelay-Dialog{
