--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -55,7 +55,7 @@
   .surchargeLayout{ 
     margin-top: 20px;
     width: 100%; 
-    height: 725px; 
+    height: 675px; 
     overflow-y: scroll; 
     border: 1px solid #ccc; 
     padding: 20px; 
@@ -98,9 +98,9 @@
     font-size: 18px;
     vertical-align: middle;
   }
-  .subDate{
+  .subDatePrice{
     display: inline-block;
-    margin-left: 32px;
+    margin-left:28px;
     font-size: 18px;
     vertical-align: middle;
   }
@@ -114,12 +114,6 @@
   }
   .selectBox .ant-form-item{
     margin-bottom: 0px;
-  }
-  .selectBox .ant-picker{
-    width: 380px;
-    padding: 11px 11px;
-    font-size: 18px;
-    border-radius: 10px;
   }
   .selectBox .ant-picker-input > input{
     text-align: center;
@@ -135,29 +129,14 @@
     color: #fddc00;
     border-radius: 10px;
   }
-
   .memoInputBox{
     width: 400px;
     height: 200px;
   }
-  
   .inputBox .ant-form-item{
     margin-bottom: 0px;
     display: inline-block;
     vertical-align: middle;
-  }
-  .inputBox #surchargeName{
-    width: 350px;
-    padding: 8px 11px;
-    font-size: 18px;
-    border-radius: 10px;
-  }
-  .inputBox #feeAdd{
-    width: 335px;
-    padding: 8px 11px;
-    font-size: 18px;
-    border-radius: 10px;
-    text-align: right;
   }
   .priceText{
     display: inline-block;
@@ -167,7 +146,7 @@
     color: #000;
   }
   .btnInsert .ant-btn{
-    width: 150px;
+    width: 200px;
     font-size: 18px;
     border-radius: 2px;
     vertical-align: middle;
@@ -467,7 +446,6 @@
   color: #1890ff;
 }
 .addFranchiseWrapper.bot .mainTitle{
-  /* display: inline-block; */
   font-size: 20px;
   vertical-align: middle;
   font-weight: bold;
