가맹점관리 페이지 작업완료

--- a/src/css/franchise.css
+++ b/src/css/franchise.css
@@ -22,3 +22,7 @@
     margin-top: 10px;
     width: 440px;
 }
+
+.franchiseContainer .ant-table-tbody > tr > td > .ant-table-wrapper:only-child .ant-table{
+    margin: 0px;
+}
