--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -19,7 +19,7 @@
 
 
   /* 할증 dialog */
-  .surcharge-dialog{
+  .surcharge-Dialog{
     position: fixed;
     top: 50%;
     left: 50%;
@@ -157,7 +157,7 @@
 
   
   /* 콜등록 dialog */
-  .addcall-dialog{
+  .addcall-Dialog{
     position: fixed;
     top: 50%;
     left: 50%;
@@ -299,7 +299,7 @@
   
 
   /* 가맹점등록 dialog */
-.addFranchise-dialog{
+.addFranchise-Dialog{
   position: fixed;
   top: 50%;
   left: 50%;
@@ -334,8 +334,8 @@
 }
 .addFranchiseLayout{ 
   margin-top: 20px;
-  width: 100%; 
-  height: 550px; 
+  width: 100%;
+  height: 510px; 
   overflow-y: scroll; 
   border: 1px solid #ccc; 
   padding: 10px 20px 20px; 
@@ -456,7 +456,7 @@
   vertical-align: middle;
   font-weight: bold;
   /* width: 70px; */
-  margin-left: 65px;
+  margin-left: 20px;
 }
 .addFranchiseWrapper.bot .ant-checkbox-inner{
   width: 20px;
@@ -464,19 +464,26 @@
 }
 .addFranchiseWrapper.bot .override-input.sub{
   /* margin-left: -30px; */
-  width: 250px;
+  margin-left: 10px;
+  width: 150px;
+}
+.addFranchiseWrapper.bot .selectItem{
+  vertical-align: middle;
+}
+.addFranchiseWrapper.bot .override-select{
+  margin-left: 10px;
+  width: 230px;
+  font-size: 15px;
+  vertical-align: middle;
 }
 .addFranchiseWrapper.bot .callTab{
-  width: 300px;
+  width: 185px;
   height: 40px;
   font-size: 18px;
-  margin-top: 12px;
-  margin-right: 10px;
-  float: right;
-  
-}
-.addFranchiseWrapper.bot .contentBlock{
-  /* display: inline-block; */
+  /* margin-top: 12px; */
+  margin-left: 20px;
+  display: inline-block;
+  vertical-align: middle;
 }
 
 
