시간지연 이미지추가 및 기사그룹관리 dialog 완료

--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -83,9 +83,7 @@
   .listBlock .ant-btn{
     margin-left: -5px;
   }
-  .insertBlock{
-
-  }
+  
   .mainTitle{
     display: inline-block;
     font-size: 20px;
@@ -607,7 +605,7 @@
   height:50px;
   width:230px;
   font-size:20px;
-  background:#40a9ff;
+  background:#40a9ff; 
   color:#fff;
   font-size:20px;
   text-align:center;
@@ -616,6 +614,14 @@
 }
 .timeDelay-btn-02 .timeDelay-btn{
   margin:0px!important;
+}
+
+.timeDelay-box .anticon {
+  /* width:2em;
+  height:2em; */
+  /* font-size: 20px; */
+  width: 20px;
+
 }
 /* 필터링 dialog */
 .filtering-Dialog{
