--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -17,6 +17,63 @@
     z-index: 2;
 }
 
+/* 직원 등록 dialog */
+.registStaff-Dialog{
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 530px;
+  border-radius: 30px;
+  z-index: 2;
+}
+
+.container{
+  background-color: white;
+  padding:30px;
+  text-align: left;
+  color: #777;
+}
+
+.title{
+  /* font-size: 28px; */
+  letter-spacing: -1px;
+  font-weight: bold;
+  color: #333;
+  text-align: right;             
+  display: inline-block;
+  font-size: 25px;
+  line-height: 30px;
+}
+
+.layout{ 
+  margin-top: 20px;
+  width: 100%;
+  height: 510px; 
+  overflow-y: scroll; 
+  border: 1px solid #ccc; 
+  padding: 10px 20px 20px; 
+  text-align: left;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+.layout::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera*/
+}
+
+.layout .contentBlock{
+  margin-top: 25px;
+}
+
+.submitBlock{
+  margin-top: 30px;
+  text-align: center;
+}
+
+.clearBtn{
+  margin-left: 20px;
+}
+
 
   /* 할증 dialog */
   .surcharge-Dialog{
@@ -83,9 +140,7 @@
   .listBlock .ant-btn{
     margin-left: -5px;
   }
-  .insertBlock{
-
-  }
+  
   .mainTitle{
     display: inline-block;
     font-size: 20px;
