--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -17,6 +17,53 @@
     z-index: 2;
 }
 
+/* 공지사항 dialog */
+.noticeDialog{
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 1300px;
+  border-radius: 30px;
+  z-index: 2;
+}
+
+.noticeLayout{ 
+  margin-top: 20px;
+  width: 100%;
+  height: 510px; 
+  overflow-y: scroll; 
+  border: 1px solid #ccc; 
+  padding: 10px 20px 20px; 
+  text-align: left;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+  padding: 30px;
+}
+.noticeLayout::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera*/
+}
+
+.noticeLayout .noticelistBlock{
+  float: left;
+  width: 47%;
+}
+
+.noticeLayout .noticeDetailBlock{
+  float: right;
+  width: 47%;
+}
+
+.noticeLayout .inputBox{
+  width: 100%;
+  height: 380px;
+}
+
+.noticeLayout .noticeInputBox{
+  width: 100%;
+  height: 380px;
+}
+
 /* 직원 등록 dialog */
 .registStaff-Dialog{
   position: fixed;
