--- a/src/css/rider.css
+++ b/src/css/rider.css
@@ -127,7 +127,120 @@
   padding: 0px!important;
   display:inline-block;
 }
+/*작업 스케줄러 그룹 설정*/
 
+.taskGroup-Dialog{
+  position:fixed;
+  top:50%;
+  left:50%;
+  transform: translate(-50%, -50%);
+  width:1000px;
+  z-index: 2;
+}
+
+.taskGroup-content{
+  padding:30px;
+  background-color:white;
+}
+
+.taskGroup-title{
+  font-size:25px;
+  font-weight:bold;
+  line-height:30px;
+  /* width:300px; */
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.taskGroup-close{
+    width:30px;
+    cursor:pointer;
+    background-color:#fddc00;
+    /* display: inline-block; */
+    float: right;
+    padding:8px;
+
+}
+
+.taskGroup-inner { 
+    width: 100%; 
+    height: 580px; 
+    overflow-y: scroll; 
+    border: 1px solid #ccc; 
+    padding: 20px; 
+    text-align: left;
+    margin-top:20px;
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+}
+
+.taskGroup-inner::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera*/
+}
+
+
+
+.taskGroup-btn{
+  display:inline-block;
+  width:1098px;
+}
+
+
+.taskGroup-btn-01{
+  text-align:center;
+  vertical-align: middle;
+  display:inline-block;
+}
+
+.taskGroup-btn-01 .tabBtn{
+  margin:0px!important;
+
+}
+.taskGroup-btn-01 > button{
+  height:40px;
+  width:130px;
+  font-size:20px;
+  color:#222;
+  font-size:20px;
+  text-align:center;
+  display:inline-block;
+  padding: 0px!important;
+}
+
+.taskGroup-list{
+  border:1px solid red;
+  width:900px;
+  display:inline-block;
+  margin-top:20px;
+  font-size:15px;
+
+}
+.taskGroup-list-01{
+  display:inline-block;
+  width:326.67px;
+  height:32px;
+  background-color:#333;
+  color:#fff;
+  text-align:center;
+  line-height:32px;
+}
+.taskGroup-list-02{
+  display:inline-block;
+  width:173.33px;
+  height:32px;
+  background-color:#333;
+  color:#fff;
+  text-align:center;
+  line-height:32px;
+}
+.taskGroup-list-03-place1{
+  display:inline-block;
+  float:right;
+
+}
+.taskGroup-content .listBlock{
+  width:550px;
+}
 /*기사 그룹관리*/
 .riderGroup-Dialog{
   position:fixed;
