기사차단목록 dialog 작업중

--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -197,6 +197,7 @@
     margin-bottom: 0px;
     display: inline-block;
     vertical-align: middle;
+    margin-left: 10px;
   }
   .priceText{
     display: inline-block;
