--- a/src/css/rider.css
+++ b/src/css/rider.css
@@ -241,6 +241,130 @@
 .taskGroup-content .listBlock{
   width:550px;
 }
+
+/*작업 스케줄러 작업등록*/
+
+.taskWork-Dialog{
+  position:fixed;
+  top:50%;
+  left:50%;
+  transform: translate(-50%, -50%);
+  width:700px;
+  z-index: 2;
+}
+
+.taskWork-content{
+  padding:30px;
+  background-color:white;
+}
+
+.taskWork-title{
+  font-size:25px;
+  font-weight:bold;
+  line-height:30px;
+  /* width:300px; */
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.taskWork-close{
+    width:30px;
+    cursor:pointer;
+    background-color:#fddc00;
+    /* display: inline-block; */
+    float: right;
+    padding:8px;
+
+}
+
+.taskWork-title-sub{
+  text-align:center;
+  margin-top:20px;
+  font-size:16px;
+  background-color:#222;
+  color:#fff;
+  height:32px;
+  line-height:32px;
+}
+
+.taskWork-inner { 
+    width: 100%; 
+    height: 400px; 
+    overflow-y: scroll; 
+    border: 1px solid #ccc; 
+    padding: 20px; 
+    text-align: left;
+    margin-top:5px;
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+}
+
+.taskWork-inner::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera*/
+}
+
+.taskWork-list{
+  /* border:1px solid red; */
+  height:360px;
+}
+.taskWork-list td{
+  width:100px;
+  font-size:16px;
+  display:inline-block;
+  /* border:1px solid blue; */
+  
+}
+
+
+.taskWork-list .taskWork-place1{
+  display: inline-block;
+}
+
+.taskWork-list .twl{
+  width:600px;
+  display:inline-block;
+  height:60px;
+  line-height:60px;
+  /* border:1px solid red */
+}
+
+
+.taskWork-btn-01{
+  margin-top:20px;
+  text-align: center;
+}
+
+.taskWork-btn-01 .tabBtn{
+  margin:0px!important;
+
+}
+.taskWork-btn-01 > button{
+  height:40px;
+  width:200px;
+  font-size:20px;
+  background-color:#1890ff;
+  color:#fff;
+  font-size:20px;
+  text-align:center;
+  display:inline-block;
+  padding: 0px!important;
+}
+
+.taskWork-list-05 .taskWork-datepicker{
+  margin-left:10px;
+
+}
+
+.taskWork-list-06 .ant-select:not(.ant-select-customize-input) .ant-select-selector{
+  margin-left:10px;
+}
+.taskWork-list-06 .inputBox{
+  color: #222 !important;;
+}
+.taskWork-list .inputBox-taskWork.sub .ant-row .ant-form-item{
+  margin-left: -10px;
+}
+
 /*기사 그룹관리*/
 .riderGroup-Dialog{
   position:fixed;
@@ -426,7 +550,6 @@
   display: inline-block;
   font-size: 16px;
   vertical-align: middle;
-  margin-left:20px!important;
 }
 
 .inputBox .ant-form-item{
@@ -445,9 +568,14 @@
   padding:0px!important;
 }
 
-.inputBox{
+.riderGroup-ftline .inputBox{
   display: inline-block;
   font-size: 16px;
   vertical-align: middle;
-  margin:0px!important;
+  margin-left:0px!important;
+  border:1px solid red;
+}
+
+.riderGroup-ftline .inputBox-rider.sub .ant-input {
+  margin-left: -10px;
 }
