--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -265,7 +265,7 @@
 
   
   /* 콜등록 dialog */
-  .addcall-Dialog{
+  .registCall-Dialog{
     position: fixed;
     top: 50%;
     left: 50%;
@@ -274,13 +274,13 @@
     border-radius: 30px;
     z-index: 2;
   }
-  .addcall-container{
+  .registCall-container{
     background-color: white;
     padding:30px;
     text-align: left;
     color: #777;
   }
-  .addcall-title{
+  .registCall-title{
     /* font-size: 28px; */
     letter-spacing: -1px;
     font-weight: bold;
@@ -290,7 +290,7 @@
     font-size: 25px;
     line-height: 30px;
   }
-  .addcall-close{
+  .registCall-close{
     width: 30px;
     background-color: #fddc00;
     padding: 8px;
@@ -298,7 +298,7 @@
     /* display: inline-block; */
     float: right;
   }
-  .addcallLayout{ 
+  .registCallLayout{ 
     margin-top: 20px;
     width: 100%; 
     /* height: 725px;  */
@@ -309,14 +309,14 @@
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
   }
-  .addcallLayout::-webkit-scrollbar {
+  .registCallLayout::-webkit-scrollbar {
     display: none; /* Chrome, Safari, Opera*/
   }
   /* 왼쪽 wrappper */
-  .addcallWrapper{
+  .registCallWrapper{
     display: inline-block;
   }
-  .addcallWrapper .mainTitle{
+  .registCallWrapper .mainTitle{
     display: inline-block;
     font-size: 20px;
     vertical-align: middle;
@@ -330,7 +330,7 @@
     font-weight: bold;
     margin-left: 10px;
   }
-  .addcallLayout .contentBlock{
+  .registCallLayout .contentBlock{
     margin-top: 15px;
   }
   .contentBlock .ant-form-item{
@@ -370,13 +370,13 @@
     width: 400px;
   }
   /* 오른쪽 wrappper */
-  .addcallWrapper.sub{
+  .registCallWrapper.sub{
     vertical-align: top;
     display: inline-block;
     width: 300px;
     margin-left: 100px;
   }
-  .addcallWrapper.sub .mainTitle{
+  .registCallWrapper.sub .mainTitle{
     display: inline-block;
     font-size: 20px;
     vertical-align: middle;
@@ -395,14 +395,14 @@
     /* margin-left: -30px; */
     width: 205px;
   }
-  .addcallWrapper.sub .callTab{
+  .registCallWrapper.sub .callTab{
     width: 300px;
     height: 40px;
     font-size: 18px;
     margin-top: 12px;
   }
 
-  .addcallLayout .mapLayout{
+  .registCallLayout .mapLayout{
     margin-top: 20px;
     width:1000px;
     height:600px;
@@ -410,7 +410,7 @@
   
 
   /* 가맹점등록 dialog */
-.addFranchise-Dialog{
+.registFran-Dialog{
   position: fixed;
   top: 50%;
   left: 50%;
@@ -419,13 +419,13 @@
   border-radius: 30px;
   z-index: 2;
 }
-.addFranchise-container{
+.registFran-container{
   background-color: white;
   padding:30px;
   text-align: left;
   color: #777;
 }
-.addFranchise-title{
+.registFran-title{
   /* font-size: 28px; */
   letter-spacing: -1px;
   font-weight: bold;
@@ -435,7 +435,7 @@
   font-size: 25px;
   line-height: 30px;
 }
-.addFranchise-close{
+.registFran-close{
   width: 30px;
   background-color: #fddc00;
   padding: 8px;
@@ -443,7 +443,7 @@
   /* display: inline-block; */
   float: right;
 }
-.addFranchiseLayout{ 
+.registFranLayout{ 
   margin-top: 20px;
   width: 100%;
   /* height: 510px;  */
@@ -454,28 +454,28 @@
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
-.addFranchiseLayout::-webkit-scrollbar {
+.registFranLayout::-webkit-scrollbar {
   display: none; /* Chrome, Safari, Opera*/
 }
 /* 왼쪽 wrappper */
-.addFranchiseWrapper{
+.registFranWrapper{
   display: inline-block;
 }
-.addFranchiseTitle{
+.registFranTitle{
   display: inline-block;
   font-size: 23px;
   vertical-align: middle;
   font-weight: bold;
   color: #1890ff;
 }
-.addFranchiseWrapper .mainTitle{
+.registFranWrapper .mainTitle{
   display: inline-block;
   font-size: 20px;
   vertical-align: middle;
   font-weight: bold;
   width: 100px;
 }
-.addFranchiseWrapper .mainTitle.red{
+.registFranWrapper .mainTitle.red{
   display: inline-block;
   font-size: 20px;
   vertical-align: middle;
@@ -490,106 +490,106 @@
   font-weight: bold;
   margin-left: 10px;
 }
-.addFranchiseLayout .contentBlock{
+.registFranLayout .contentBlock{
   margin-top: 15px;
 }
-.addFranchiseWrapper .ant-form-item{
+.registFranWrapper .ant-form-item{
   margin-bottom: 0px;
 }
-.addFranchiseWrapper .selectItem{
+.registFranWrapper .selectItem{
   display: inline-block;
 }
-.addFranchiseWrapper .override-select{
+.registFranWrapper .override-select{
   margin-left: 20px;
   width: 250px;
   font-size: 15px;
 }
-.addFranchiseWrapper .override-select.branch{
+.registFranWrapper .override-select.branch{
   margin-left: 20px;
   width: 300px;
   font-size: 15px;
   display: inline-block;
   vertical-align: middle;
 }
-.addFranchiseWrapper .override-input{
+.registFranWrapper .override-input{
   margin-left: 20px;
   width: 300px;
 }
 /* 오른쪽 wrappper */
-.addFranchiseWrapper.sub{
+.registFranWrapper.sub{
   vertical-align: top;
   display: inline-block;
   /* width: 340px; */
   margin-top: 36px;
   margin-left: 70px;
 }
-.addFranchiseWrapper.sub .mainTitle{
+.registFranWrapper.sub .mainTitle{
   display: inline-block;
   font-size: 20px;
   vertical-align: middle;
   font-weight: bold;
   width: 75px;
 }
-.addFranchiseWrapper.sub .override-input.sub{
+.registFranWrapper.sub .override-input.sub{
   /* margin-left: -30px; */
   width: 300px;
 }
-.addFranchiseWrapper.sub .override-input.price{
+.registFranWrapper.sub .override-input.price{
   /* margin-left: -30px; */
   width: 200px;
   margin-right: 10px;
 }
-.addFranchiseWrapper.sub .callTab{
+.registFranWrapper.sub .callTab{
   width: 400px;
   height: 40px;
   font-size: 18px;
   margin-top: 60px;
 }
 /* 하단 랩퍼 */
-.addFranchiseWrapper.bot{
+.registFranWrapper.bot{
   margin-top: 40px;
   padding-top: 30px;
   border-top: 1px solid #b5b5b5;
   display: inline-block;
 }
-.addFranchiseWrapper.bot .addFranchiseTitle{
+.registFranWrapper.bot .registFranTitle{
   font-size: 23px;
   vertical-align: middle;
   font-weight: bold;
   color: #1890ff;
 }
-.addFranchiseWrapper.bot .mainTitle{
+.registFranWrapper.bot .mainTitle{
   font-size: 20px;
   vertical-align: middle;
   font-weight: bold;
   width: 90px;
 }
-.addFranchiseWrapper.bot .subTitle{
+.registFranWrapper.bot .subTitle{
   font-size: 20px;
   vertical-align: middle;
   font-weight: bold;
   /* width: 70px; */
   margin-left: 20px;
 }
-.addFranchiseWrapper.bot .ant-checkbox-inner{
+.registFranWrapper.bot .ant-checkbox-inner{
   width: 20px;
   height: 20px;
 }
-.addFranchiseWrapper.bot .override-input.sub{
+.registFranWrapper.bot .override-input.sub{
   /* margin-left: -30px; */
   margin-left: 10px;
   width: 150px;
 }
-.addFranchiseWrapper.bot .selectItem{
+.registFranWrapper.bot .selectItem{
   vertical-align: middle;
 }
-.addFranchiseWrapper.bot .override-select{
+.registFranWrapper.bot .override-select{
   margin-left: 10px;
   width: 230px;
   font-size: 15px;
   vertical-align: middle;
 }
-.addFranchiseWrapper.bot .callTab{
+.registFranWrapper.bot .callTab{
   width: 185px;
   height: 40px;
   font-size: 18px;
