--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -600,6 +600,101 @@
 }
 
 
+/* 코인이체 dialog */
+.coinTran-Dialog{
+  position:fixed;
+  top:50%;
+  left:50%;
+  transform: translate(-50%, -50%);
+  width:500px;
+  z-index: 2;
+}
+
+.coinTran-content{
+  padding:30px;
+  background-color:white;
+}
+
+.coinTran-title{
+  font-size:25px;
+  font-weight:bold;
+  line-height:30px;
+  /* width:300px; */
+  display: inline-block;
+  vertical-align: middle;
+}
+.coinTran-close{
+    width:30px;
+    cursor:pointer;
+    background-color:#fddc00;
+    /* display: inline-block; */
+    float: right;
+    padding:8px;
+
+}
+.coinTran-title-sub{
+  text-align:center;
+  margin-top:20px;
+  font-size:16px;
+  background-color:#222;
+  color:#fff;
+  height:32px;
+  line-height:32px;
+}
+.coinTran-inner { 
+    width: 100%; 
+    height: 200px; 
+    overflow-y: scroll; 
+    border: 1px solid #ccc; 
+    padding: 20px; 
+    text-align: left;
+    margin-top:5px;
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+}
+.coinTran-inner::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera*/
+}
+.coinTran-list{
+  text-align: center;
+}
+.coinTran-list td{
+  width:100px;
+  font-size:16px;
+  display:inline-block;
+}
+.coinTran-list .coinTran-place1{
+  display: inline-block;
+}
+.coinTran-list .twl{
+  width:400px;
+  display:inline-block;
+  height:60px;
+  line-height:30px;
+}
+.coinTran-btn-01{
+  margin-top:20px;
+  text-align:right;
+}
+.coinTran-btn-01 .tabBtn{
+  margin:0px!important;
+}
+.coinTran-btn-01 > button{
+  height:40px;
+  width:200px;
+  font-size:20px;
+  background-color:#1890ff;
+  color:#fff;
+  font-size:20px;
+  text-align:center;
+  display:inline-block;
+  padding: 0px!important;
+}
+.coinTran-list .inputBox-coinTran.sub .ant-input{
+  margin-left: -20px;
+  width:300px;
+}
+
 /* 시간지연 dialog */
 .timeDelay-Dialog{
   position:fixed;
